@@ -8,6 +8,7 @@ WebAOM!
 *Window opens at a more comfortable size.
 *Fixed startup issue where the embedded database could fail to open on some systems.
 *Added "Reset to default" in Rules editor right-click menu.
+*File and folder pickers now use native system dialogs and remember recent locations better.
 
 2.4.1 2026.02.14
 *AppImage now supports automatic updates.
